# sandboxes

./: .gitignore  README.md  setup_wsl.sh
cpp/: CMakeLists.txt  Readme.md
cpp/src/: exercice.cpp  header_variables.cpp  header_variables.h  main.cpp  nth_element.cpp  nth_element.h  ref_value.cpp  ref_value.h  template.cpp  template.h  util.h
python/: freeze_venv.sh  setup_venv.sh
python/data_science/: pandas_test.py  pyproject.toml  requirements.txt
python/sandbox-colormaps/: Readme.md  pyproject.toml
web/node-express/: .eslintrc.yml  package-lock.json  package.json
web/node-express/src/: index.js
web/react-official-tutorial/: .eslintrc.json  .eslintrc.yml  .prettierrc  package-lock.json  package.json
web/react-official-tutorial-ts/: .eslintrc.yml  package-lock.json  package.json  tsconfig.json
web/react-official-tutorial-ts/src/: board.tsx  index.tsx
web/react-official-tutorial/src/: board.jsx  index.js  index.jsx
web/ts-react-sandbox/: package-lock.json  package.json
web/ts-react-sandbox/public/: index.html
web/ts-react-sandbox/src/: App.css  App.tsx
web/ts-react-ui-component-libs/: .eslintrc.yml  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json
web/ts-react-ui-component-libs/src/: App.css  App.tsx  Navbar.css  Navbar.tsx  index.css
web/ts-react-ui-component-libs/src/ui_lib_examples/: Adobe.tsx  Ant.tsx  Chakra.tsx  Mui.css  Mui.tsx
