[tool.poetry]
name = "data_science"
version = "0.1.0"
description = "Sandbox for Python data science stuff"
authors = ["Pierre Amelot <pierre.p.amelot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.2"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
