[tool.poetry]
name = "sandbox-colormaps"
version = "0.1.0"
description = "Playing with different packages to create and review colormaps based on perceptual colormaps talks, in particular from SciPy"
authors = ["Pierre Amelot <pierre.p.amelot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
viscm = "^0.9"
colorspacious = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
